[package]
name = "hash-based-signatures"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to sign arbitrary files using hash-based signatures."
authors = ["Georg Wiese <georgwiese@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.144", features = ["derive"]}
serde-big-array = "0.4.1"
rayon = "1.5.3"
rmp-serde = "1.1.0"
serde_json = "1.0.85"
clap = {version = "3.2.22", features = ["derive"]}
hmac-sha256 = "1.1.4"
rand = "0.8.5"
rand_chacha = "0.3.1"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
# Used for benchmarking
criterion = "0.4.0"