[package]
name = "hash-based-signatures"
version = "0.1.0"
edition = "2021"
description = "A command-line tool to sign arbitrary files using hash-based signatures."
authors = ["Georg Wiese <georgwiese@gmail.com>"]

[dependencies]
# Serialization
serde = {version = "1.0.144", features = ["derive"]}
serde-big-array = "0.4.1"
rmp-serde = "1.1.0"
serde_json = "1.0.85"

# Cryptography
ring = "0.16.20"
rand = "0.8.5"
rand_chacha = "0.3.1"

# WASM
wasm-bindgen = "0.2"
js-sys = "0.3.60"
getrandom = { version = "0.2", features = ["js"] }  # For WASM support of rand

# Other
anyhow = "1.0.65"
data-encoding = "2.3.2"
rayon = "1.5.3"
clap = {version = "3.2.22", features = ["derive"]}

[lib]
# This is required to build with WASM support
crate-type = ["cdylib", "lib"]

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
# Used for benchmarking
criterion = "0.4.0"